updates and polish

--- a/hot-php-apache/Dockerfile
+++ b/hot-php-apache/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.0.7-apache
+FROM php:apache
 
 RUN apt-get update && apt-get install -y \
   zip unzip \
@@ -6,16 +6,6 @@ RUN apt-get update && apt-get install -y \
 # download and install php composer
   && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-
-# move document root from apache default
-# ENV APACHE_DOCUMENT_ROOT /var/www
-# RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
-# RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
-
 # install xdebug
-RUN pecl install -f xdebug-3.0.2 \
-  && docker-php-ext-enable xdebug \
-  && echo "xdebug.mode=debug" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-  && echo "xdebug.client_host=host.docker.internal" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-  && echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-  && echo "xdebug.idekey=''" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN pecl install xdebug \
+  && docker-php-ext-enable xdebug
