--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - 8080:80
     volumes:
       - ./www:/var/www
+      - ./hot-php-apache/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./hot-php-apache/php/conf.d/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
 
   db:
     image: mysql:8.0.25
