chrome debug settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,9 +34,9 @@
     {
       "name": "Launch Chrome",
       "request": "launch",
-      "type": "pwa-chrome",
+      "type": "chrome",
       "url": "http://localhost:8080",
-      "webRoot": "${workspaceRoot}/AWS/www"
+      "webRoot": "${workspaceRoot}/www/html"
     },
     {
       "name": "Launch Built-in web server",
